# qymyzlm

./: .gcloudignore  .gitignore  .ruff.toml  CLAUDE.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  RESEARCH.md  pyproject.toml
configs/: config.yaml
configs/eval/: default.yaml
configs/model/: kaz1b.yaml  kaz1b_continual.yaml  kaz500m.yaml  kaz50m_debug.yaml  kaz_nano.yaml  qymyz1_5b.yaml
configs/tokenizer/: bpe_50k.yaml  unigram_50k.yaml
configs/training/: pretrain.yaml  pretrain_500m.yaml  pretrain_continual.yaml  pretrain_debug.yaml  pretrain_nano.yaml  sft_lora.yaml
embed/: CLAUDE.md  README.md  pyproject.toml
embed/kaggle/: kernel-metadata.json  qymyz_embed_train.ipynb
embed/src/qymyz_embed/: __init__.py  evaluate.py  merge.py  prefixes.py  train_lim.py
embed/src/qymyz_embed/data/: __init__.py  hard_negatives.py  kazparc_pairs.py  synth_filter.py
embed/tests/: conftest.py  test_evaluate.py  test_kazparc_pairs.py  test_merge.py  test_prefixes.py  test_synth_filter.py  test_train_lim.py
embed/tests/fixtures/: kazparc_sample.jsonl
evallab/: CLAUDE.md  README.md  pyproject.toml
evallab/kaggle/: heartbeat_watch.py  kazeval_kaggle.ipynb  kernel-metadata.json  launch.py
evallab/results/: 2024-04-06__KazQADRetrieval__BM25-fine-tuned-reranker-KazQAD-paper-best-pipeline.json  2025-12-04__KazQAD-HardNeg__intfloat-multilingual-e5-large.json  2026-04-30__KazMMLU-kk__Qwen-Qwen3-0.6B-Base.json  2026-07-04__KazQADReranking__intfloat-multilingual-e5-large.json  2026-07-04__KazQADRetrieval__intfloat-multilingual-e5-large.json  2026-07-05__KazQADRetrieval__intfloat-multilingual-e5-base.json
evallab/src/kazeval/: __init__.py  hardneg.py  leaderboard.py  qorgau.py  results.py  run_kazmmlu.py  run_retrieval.py
evallab/src/kazeval/lm_eval_tasks/kazmmlu_kaz/: kazmmlu_kaz_geography.yaml  kazmmlu_kaz_kazakh_language.yaml  kazmmlu_kaz_physics.yaml  kazmmlu_kaz_reading_literacy.yaml  kazmmlu_kaz_world_history.yaml
evallab/src/kazeval/tasks/: __init__.py  kazqad_reranking.py  kazqad_retrieval.py
evallab/tests/: conftest.py  test_hardneg.py  test_kazmmlu_tasks.py  test_leaderboard.py  test_qorgau.py  test_results.py  test_run_retrieval_cli.py  test_tasks.py  test_tasks_load_data.py
evallab/tests/fixtures/: leaderboard_golden.md  qorgau_cs_sample.csv
evallab/tests/fixtures/results/: 2025-12-04__KazQAD-HardNeg__intfloat-multilingual-e5-large.json  2026-04-30__KazMMLU-kk__Qwen-Qwen3-0.6B-Base.json  2026-07-01__KazQADRetrieval__intfloat-multilingual-e5-base.json  2026-07-02__DemoTask__demo-model.json
frontend/: index.html
scripts/: benchmark_baselines.py  build_continual_pt.py  clean_data.py  download_data.py  evaluate.py  export_checkpoint.py  pack_data.py  prepare_continual_data.py  prepare_gcs_data.py  qlora_continual.py  serve.py  submit_vertex_job.py  train.py  train_continual.py  train_sft.py  train_tokenizer.py  train_vertex.py
src/kazllm/: __init__.py
src/kazllm/cockpit/: __main__.py  server.py  state.py
src/kazllm/cockpit/static/: app.js  index.html  style.css
src/kazllm/eval/: __init__.py  benchmarks.py  harness.py  metrics.py  results.py
src/kazllm/eval/tasks/kazmmlu_kaz/: _kazmmlu_kaz.yaml  _kazmmlu_kaz_template_yaml  kazmmlu_kaz_biology.yaml  kazmmlu_kaz_chemistry.yaml  kazmmlu_kaz_informatics.yaml  kazmmlu_kaz_kazakh_history.yaml  kazmmlu_kaz_kazakh_literature.yaml  kazmmlu_kaz_law.yaml  kazmmlu_kaz_math.yaml  utils.py
src/kazllm/lab/: __init__.py  __main__.py  inference.py  server.py
src/kazllm/lab/static/: app.js  index.html  style.css
src/kazllm/model/: __init__.py  attention.py  block.py  config.py  engram.py  mhc.py  mlp.py  model.py  mtp.py  norm.py  qwen_engram_wrapper.py  rope.py
src/kazllm/tokenizer/: __init__.py  fertility.py  hf_wrapper.py  trainer.py
src/kazllm/training/: __init__.py  callbacks.py  fsdp_utils.py  loss.py  scheduler.py  trainer.py
src/kazllm/utils/: __init__.py  config.py  io.py  logging.py  seed.py
tests/: conftest.py  test_benchmark_script.py  test_engram.py  test_eval.py  test_fertility.py  test_filters.py  test_imports.py  test_lab.py  test_mhc.py  test_model_forward.py  test_mtp.py  test_packer.py  test_qwen_engram_wrapper.py  test_rope.py  test_tokenizer_fertility.py
