[project]
name = "qymyzlm"
version = "0.1.0"
description = "QymyzLM: Morphological memory makes agglutinative LMs punch above their weight"
requires-python = ">=3.11"
dependencies = [
    # Core ML
    "torch>=2.3.0",
    "transformers>=4.44.0",
    "datasets>=2.20.0",
    "accelerate>=0.32.0",
    "tokenizers>=0.19.0",
    "sentencepiece>=0.2.0",
    "peft>=0.12.0",
    "bitsandbytes>=0.43.0",
    # Data
    "fasttext-langdetect>=1.0.5",
    "datasketch>=1.6.4",
    "ftfy>=6.2.0",
    "numpy>=1.26.0",
    # Training infra
    "wandb>=0.17.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "rich>=13.0.0",
    # Evaluation
    "lm-eval>=0.4.3",
    "sacrebleu>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
