[project]
name = "qymyz-embed"
version = "0.1.0"
description = "QymyzEmbed: Kazakh text-embedding models (Less-is-More fine-tune of mE5, later QymyzLM embedding head)"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=3.0.0",
    "datasets>=2.20.0",
    "torch>=2.3.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qymyz_embed"]
