[project]
name = "qymyz-embed"
version = "0.1.0"
description = "QymyzEmbed: Kazakh text-embedding models (Less-is-More fine-tune of mE5, later QymyzLM embedding head)"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=3.0.0",
    "datasets>=2.20.0",
    "torch>=2.3.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# Do NOT consult .gitignore for file selection: the repo-root ignore pattern
# "data/" (large data dirs) would silently drop the src/qymyz_embed/data/
# CODE subpackage from wheels (bit us on Kaggle 2026-07-05: pip-installed
# package had no qymyz_embed.data while editable installs worked fine).
ignore-vcs = true

[tool.hatch.build.targets.wheel]
packages = ["src/qymyz_embed"]
