[project]
name = "kazeval"
version = "0.1.0"
description = "Kazakh benchmarking lab: KazQAD retrieval/reranking (kk-MTEB), KazMMLU, Qorgau guardrails"
requires-python = ">=3.11"
dependencies = [
    "mteb>=1.36.0",
    "datasets>=2.20.0",
    "lm-eval>=0.4.3",
    "huggingface-hub>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kazeval"]
